--- a/app/src/main/res/layout/fragment_static1.xml
+++ b/app/src/main/res/layout/fragment_static1.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:background="#FF0000"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="fragment 1"
-        android:textSize="30dp"
         android:layout_gravity="center"
+        android:text="fragment 1"
+        android:textSize="30dp" />
+    <Button
+        android:id="@+id/btn_gotoMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="gotomain"
         />
 </LinearLayout>
